--- a/app/src/pages/en/index.astro
+++ b/app/src/pages/en/index.astro
@@ -2,15 +2,15 @@
 
 ---
 
-<html lang="ar">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>مدونة عبدالرحمن الغول</title>
+		<title>Abdulrahman AlGhoul's Blog</title>
 	</head>
 	<body>
-		<h1>الغول</h1>
+		<h1>AlGhoul</h1>
 	</body>
 </html>
