--- a/app/src/pages/en/index.astro
+++ b/app/src/pages/en/index.astro
@@ -1,16 +1,22 @@
 ---
-
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import {Navbar} from "../../components/ui/core/Navbar";
+const navItems = [
+  {
+    name: "Home",
+    link: "/"
+  }
+];
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Abdulrahman AlGhoul's Blog</title>
-	</head>
-	<body>
-		<h1>AlGhoul</h1>
-	</body>
-</html>
+<BaseLayout locale="en" title="Abdulrahman AlGhoul's Blog">
+  <main class="h-screen">
+    <Navbar 
+      locale="en" 
+      navItems={navItems}
+      logo="AlGhoul"
+      githubText="Github Repository" 
+      client:visible
+    />
+  </main>
+</BaseLayout>
