--- a/app/src/pages/en/index.astro
+++ b/app/src/pages/en/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import {Navbar} from "../../components/ui/core/Navbar";
+import Footer from "../../components/ui/core/Footer";
 const navItems = [
   {
     name: "Home",
@@ -10,13 +11,20 @@ const navItems = [
 ---
 
 <BaseLayout locale="en" title="Abdulrahman AlGhoul's Blog">
-  <main class="h-screen">
-    <Navbar 
+  <Navbar 
       locale="en" 
       navItems={navItems}
       logo="AlGhoul"
       githubText="Github Repository" 
       client:visible
-    />
+  />
+  <main class="h-screen">
   </main>
+  <Footer
+    slot="footer"
+    locale="en"
+    authorName="Abdulrahman AlGhoul"
+    authorRole="Software Developer & Tech Writer"
+    description="Built with Next.js and deployed on Github"
+  />
 </BaseLayout>
