--- a/app/src/pages/index.astro
+++ b/app/src/pages/index.astro
@@ -3,27 +3,57 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import {Navbar} from "../components/ui/core/Navbar";
 import Footer from "../components/ui/core/Footer";
 import SwarmScene from "../components/ui/core/scenes/SwarmScene";
-const navItems = [
-  {
-    name: "الرئيسية",
-    link: "/"
-  }
-];
+import { getCollection } from "astro:content";
+import {PostCard} from "../components/ui/posts/PostCard";
+import { generateExcerptFromMarkdown, getCategoryCounts, getTagCounts } from "@lib/posts";
+import { Sidebar } from "@components/ui/posts/Sidebar";
+import { HeroParallax } from "@components/ui/hero-parallax";
+import { PRODUCTS } from "@lib/data";
+import MobileAppShowcase from "@components/ui/core/scenes/MobileAppShowcase";
+
+const postsWithExcerpts = await Promise.all(
+  (await getCollection("posts"))
+    .filter((post) => !post.data.draft)
+    .filter((post) => post.data.lang === "ar")
+    .sort((a, b) => b.data.publishedAt.valueOf() - a.data.publishedAt.valueOf())
+    .slice(0, 3)
+    .map(async (post) => {
+      const excerpt = await generateExcerptFromMarkdown(post.body ?? "", 160);
+      return {
+        ...post,
+        excerpt
+      };
+    })
+);
+
+const categories = await getCategoryCounts();
+const tags = await getTagCounts();
 ---
 
 <BaseLayout locale="ar" title="مدونة عبد الرحمن الغول">
- <Navbar 
-      locale="ar" 
-      navItems={navItems}
-      logo="الغول"
-      githubText="المستودع" 
-      client:only
+  <Navbar 
+    locale="ar" 
+    navItems={navItems}
+    logo="الغول"
+    githubText="المستودع" 
+    client:only
   />
   
   <main class="h-screen">
-      <div class="fixed inset-0 -z-10">
-        <SwarmScene  client:only/>
+    <div class="fixed inset-0 -z-10">
+      <SwarmScene  client:only/>
+    </div>
+
+    <section class="flex flex-col md:flex-row container justify-center p-4 md:p-8 mx-auto mt-30 md:mt-20 gap-8">
+      <div>
+        <h1 class="text-3xl font-bold mb-6" dir="rtl">المقالات الأخيرة</h1>
+        <div class="flex flex-col gap-4">
+          {postsWithExcerpts.map((post) => (
+            <PostCard post={post} locale="ar" READ_MORE_TEXT="قراءة المزيد ←" client:only />
+          ))}
+        </div>
       </div>
+    </section>
   </main>
 
   <Footer
