feat: add Categories & Tags side bar

--- a/app/src/pages/en/index.astro
+++ b/app/src/pages/en/index.astro
@@ -53,6 +53,8 @@ const tags = await getTagCounts();
           ))}
         </div>
       </div>
+      
+      <Sidebar categories={categories} tags={tags} client:only/>
     </section>
   </main>
 
