--- a/app/src/pages/en/posts/[slug].astro
+++ b/app/src/pages/en/posts/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import BaseEnglishLayout from "@layouts/BaseEnglishLayout.astro";
 import { getCollection, render } from "astro:content";
-import PostContent from "@components/ui/posts/PostContent";
 import SpaceBoyScene from "@components/ui/core/scenes/SpaceBoyScene";
+import PostWithTOC from "@components/ui/posts/PostWithTOC";
 
 export async function getStaticPaths() {
  const allPosts = (await getCollection("posts"))
@@ -17,7 +17,7 @@ export async function getStaticPaths() {
 }
 
 const { post } = Astro.props;
-const { Content } = await render(post);
+const { Content, headings } = await render(post);
 ---
 <BaseEnglishLayout>
   <div class="min-h-screen">
@@ -28,9 +28,9 @@ const { Content } = await render(post);
     <main class="min-h-screen mb-12">
       <div class="flex lg:gap-8 mt-24 px-4 sm:px-6 lg:px-8">
         <div class="flex flex-1 gap-4 justify-center min-w-0">
-          <PostContent post={post} locale="en" client:only>
+          <PostWithTOC locale="en" post={post} headings={headings} client:only>
             <Content />
-          </PostContent>
+          </PostWithTOC>
         </div>
       </div>
     </main>
