--- a/app/src/pages/posts/[slug].astro
+++ b/app/src/pages/posts/[slug].astro
@@ -18,7 +18,7 @@ export async function getStaticPaths() {
 }
 
 const { post } = Astro.props;
-const { Content, headings } = await render(post);
+const { Content, headings, remarkPluginFrontmatter } = await render(post);
 const { prevPost, nextPost } = await getPrevNextForPost(post.id);
 ---
 <BaseArabicLayout>
@@ -31,7 +31,7 @@ const { prevPost, nextPost } = await getPrevNextForPost(post.id);
       <div class="flex lg:gap-8 mt-24 px-4 sm:px-6 lg:px-8">
         <div class="flex flex-1 gap-4 justify-center min-w-0">
           <PostWithTOC 
-            post={post}
+            post={{...post, frontmatter: remarkPluginFrontmatter}}
             headings={headings}
             prevPost={prevPost}
             nextPost={nextPost}
