--- a/app/src/layouts/BaseArabicLayout.astro
+++ b/app/src/layouts/BaseArabicLayout.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import {Navbar} from "../components/ui/core/Navbar";
 import Footer from "../components/ui/core/Footer";
+import { getSearchablePosts } from "@lib/posts";
   
 const navItems = [
   {
@@ -9,6 +10,8 @@ const navItems = [
     link: "/"
   }
 ];
+
+const posts = await getSearchablePosts();
 ---
 
 <BaseLayout locale="ar" title="مدونة عبد الرحمن الغول">
@@ -17,6 +20,7 @@ const navItems = [
     navItems={navItems}
     logo="الغول"
     githubText="المستودع" 
+    searchablePosts={posts}
     client:only
   />
 
