--- a/app/src/layouts/BaseEnglishLayout.astro
+++ b/app/src/layouts/BaseEnglishLayout.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 import {Navbar} from "@components/ui/core/Navbar";
 import Footer from "@components/ui/core/Footer";
+import { getSearchablePosts } from "@lib/posts";
  
 const navItems = [
   {
@@ -9,6 +10,8 @@ const navItems = [
     link: "/en"
   }
 ];
+
+const posts = await getSearchablePosts();
 ---
 
 <BaseLayout locale="en" title="Abdulrahman AlGhoul's Blog">
@@ -17,8 +20,9 @@ const navItems = [
     navItems={navItems}
     logo="AlGhoul"
     githubText="Github Repository" 
+    searchablePosts={posts}
     languageSelectorProps={{ locale: "en", title: "Language", label: "Pick a language" }}
-    client:visible
+    client:only
   />
   
   <slot />
