feat: filter tags & categories posts counts by locale

--- a/app/src/pages/en/index.astro
+++ b/app/src/pages/en/index.astro
@@ -24,8 +24,8 @@ const postsWithExcerpts = await Promise.all(
     })
 );
 
-const categories = await getCategoryCounts();
-const tags = await getTagCounts();
+const categories = await getCategoryCounts("en");
+const tags = await getTagCounts("en");
 ---
 
 <BaseEnglishLayout>
