feat: add posts pagination by publishedAt

--- a/app/src/layouts/BaseArabicLayout.astro
+++ b/app/src/layouts/BaseArabicLayout.astro
@@ -8,7 +8,11 @@ const navItems = [
   {
     name: "الرئيسية",
     link: "/"
-  }
+  },
+  {
+    name: "المقالات",
+    link: "/posts/page/1"
+  },
 ];
 
 const posts = await getSearchablePosts();
