--- a/app/src/layouts/BaseEnglishLayout.astro
+++ b/app/src/layouts/BaseEnglishLayout.astro
@@ -8,7 +8,12 @@ const navItems = [
   {
     name: "Home",
     link: "/en"
-  }
+  },
+  {
+    name: "Posts",
+    link: "/en/posts/page/1"
+  },
+
 ];
 
 const posts = await getSearchablePosts();
