--- a/app/src/pages/en/categories/[category]/[page].astro
+++ b/app/src/pages/en/categories/[category]/[page].astro
@@ -15,10 +15,13 @@ export async function getStaticPaths({ paginate }: Parameters<GetStaticPaths>[0]
   return categories.flatMap((category) => {
     const categoryPosts = posts.filter((p) => p.data.category.id === category)
     .filter((p) => !p.data.draft)
-    .filter((p) => p.data.lang === "en");
+    .filter((p) => p.data.lang === "en")
+    .sort(
+      (a, b) => b.data.publishedAt.getTime() - a.data.publishedAt.getTime()
+    );
 
     return paginate(categoryPosts, {
-      params: { category }, // This ensures Astro.params.category is set
+      params: { category }, 
       pageSize: postsPerPage,
     });
   });
@@ -30,7 +33,47 @@ const currentPagePosts = page.data;
 const totalPages = page.lastPage;
 const pageNumber = page.currentPage
 ---
-<BaseEnglishLayout>
+<BaseEnglishLayout subTitle={`Latest Posts in “${category}”`}>
+  <meta property="og:title" content={`Latest Posts in “${category}” | Abdulrahman AlGhoul's Blog`} />
+  <meta name="twitter:title" content={`Latest Posts in “${category}” | Abdulrahman AlGhoul's Blog`} />
+  <meta name="application-name" content="Abdulrahman AlGhoul's Blog" />
+
+  <meta name="author" content="Abdulrahman AlGhoul" />
+  <meta name="publisher" content="Abdulrahman AlGhoul" />
+  <meta name="creator" content="Abdulrahman AlGhoul" />
+
+  <meta property="og:site_name" content="Abdulrahman AlGhoul's Blog" />
+
+  <meta name="description" content={`Latest posts in the blog - Category: ${category} - Page ${pageNumber}`} />
+  <meta property="og:description" content={`Latest posts in the blog - Category: ${category} - Page ${pageNumber}`} />
+  <meta name="twitter:description" content={`Latest posts in the blog - Category: ${category} - Page ${pageNumber}`} />
+
+  <link rel="canonical" href={`https://al-ghoul.github.io/en/categories/${category}/${pageNumber}`} />
+  <meta property="og:url" content={`https://al-ghoul.github.io/en/categories/${category}/${pageNumber}`} />
+
+  <link rel="alternate" hreflang="ar" href={`https://al-ghoul.github.io/categories/${category}/${pageNumber}`} />
+  <link rel="alternate" hreflang="en" href={`https://al-ghoul.github.io/en/categories/${category}/${pageNumber}`} />
+  <link rel="alternate" hreflang="x-default" href={`https://al-ghoul.github.io/en/categories/${category}/${pageNumber}`} />
+
+  {pageNumber > 1 && <link rel="prev" href={`https://al-ghoul.github.io/en/categories/${category}/${pageNumber - 1}`} />}
+  {pageNumber < totalPages && <link rel="next" href={`https://al-ghoul.github.io/en/categories/${category}/${pageNumber + 1}`} />}
+
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="ar_AR" />
+
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary" />
+
+  <meta property="og:image" content="https://al-ghoul.github.io/en-og-image.png" />
+  <meta property="og:image:width" content="1851" />
+  <meta property="og:image:height" content="380" />
+  <meta property="og:image:type" content="image/png" />
+
+  <meta name="twitter:image" content="https://al-ghoul.github.io/en-og-image.png" />
+
+  <meta property="og:image:alt" content="A preview image of Abdulrahman AlGhoul's blog" />
+  <meta name="twitter:image:alt" content="A preview image of Abdulrahman AlGhoul's blog" />
+ 
   <div class="min-h-screen">
     <div class="fixed inset-0 -z-10">
       <SpaceBoyScene client:only />
