--- a/app/src/pages/en/tags/[tag]/[page].astro
+++ b/app/src/pages/en/tags/[tag]/[page].astro
@@ -1,5 +1,5 @@
 ---
-import BaseArabicLayout from "@layouts/BaseArabicLayout.astro";
+import BaseEnglishLayout from "@layouts/BaseEnglishLayout.astro";
 import SpaceBoyScene from "@components/ui/core/scenes/SpaceBoyScene";
 import Timeline from "@components/ui/timeline";
 import { getCollection, type CollectionEntry, } from 'astro:content';
@@ -25,7 +25,10 @@ export async function getStaticPaths({ paginate }: Parameters<GetStaticPaths>[0]
         p.data.tags?.some((t) => t.id.toLowerCase() === tag)
       )
       .filter((p) => !p.data.draft)
-      .filter((p) => p.data.lang === "en");
+    .filter((p) => p.data.lang === "en")
+    .sort(
+      (a, b) => b.data.publishedAt.getTime() - a.data.publishedAt.getTime()
+    );
 
     return paginate(tagPosts, {
       params: { tag }, 
@@ -40,7 +43,48 @@ const currentPagePosts = page.data;
 const totalPages = page.lastPage;
 const pageNumber = page.currentPage
 ---
-<BaseArabicLayout>
+<BaseEnglishLayout subTitle={`Latest Posts in “${tag}”`}>
+  <meta property="og:title" content={`Latest Posts in “${tag}” | Abdulrahman AlGhoul's Blog`} />
+  <meta name="twitter:title" content={`Latest Posts in “${tag}” | Abdulrahman AlGhoul's Blog`} />
+  <meta name="application-name" content="Abdulrahman AlGhoul's Blog" />
+
+  <meta name="author" content="Abdulrahman AlGhoul" />
+  <meta name="publisher" content="Abdulrahman AlGhoul" />
+  <meta name="creator" content="Abdulrahman AlGhoul" />
+
+  <meta property="og:site_name" content="Abdulrahman AlGhoul's Blog" />
+
+  <meta name="description" content={`Latest posts in the blog - Tag: ${tag} - Page ${pageNumber}`} />
+  <meta property="og:description" content={`Latest posts in the blog - Tag: ${tag} - Page ${pageNumber}`} />
+  <meta name="twitter:description" content={`Latest posts in the blog - Tag: ${tag} - Page ${pageNumber}`} />
+
+  <link rel="canonical" href={`https://al-ghoul.github.io/en/tags/${tag}/${pageNumber}`} />
+  <meta property="og:url" content={`https://al-ghoul.github.io/en/tags/${tag}/${pageNumber}`} />
+
+  <link rel="alternate" hreflang="ar" href={`https://al-ghoul.github.io/tags/${tag}/${pageNumber}`} />
+  <link rel="alternate" hreflang="en" href={`https://al-ghoul.github.io/en/tags/${tag}/${pageNumber}`} />
+  <link rel="alternate" hreflang="x-default" href={`https://al-ghoul.github.io/en/tags/${tag}/${pageNumber}`} />
+
+  {pageNumber > 1 && <link rel="prev" href={`https://al-ghoul.github.io/en/tags/${tag}/${pageNumber - 1}`} />}
+  {pageNumber < totalPages && <link rel="next" href={`https://al-ghoul.github.io/en/tags/${tag}/${pageNumber + 1}`} />}
+
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="ar_AR" />
+
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary" />
+
+  <meta property="og:image" content="https://al-ghoul.github.io/en-og-image.png" />
+  <meta property="og:image:width" content="1851" />
+  <meta property="og:image:height" content="380" />
+  <meta property="og:image:type" content="image/png" />
+
+  <meta name="twitter:image" content="https://al-ghoul.github.io/en-og-image.png" />
+
+  <meta property="og:image:alt" content="A preview image of Abdulrahman AlGhoul's blog" />
+  <meta name="twitter:image:alt" content="A preview image of Abdulrahman AlGhoul's blog" />
+
+ 
   <div class="min-h-screen">
     <div class="fixed inset-0 -z-10">
       <SpaceBoyScene client:only />
@@ -49,11 +93,11 @@ const pageNumber = page.currentPage
     <main class="min-h-screen">
       {/* Content */}
       <section class="container mx-auto px-4 py-20">
-        <h1 class="text-2xl md:text-4xl font-bold mb-8 capitalize" dir="rtl">
-          مقالات في “{tag}”
+        <h1 class="text-2xl md:text-4xl font-bold mb-8 capitalize">
+          Posts in “{tag}”
         </h1>
 
-        <Timeline data={currentPagePosts} client:only />
+        <Timeline locale="en" data={currentPagePosts} client:only />
 
         <nav
           class="flex justify-center items-center gap-2 mt-12"
@@ -97,4 +141,4 @@ const pageNumber = page.currentPage
       </section>
     </main>
   </div>
-</BaseArabicLayout>
+</BaseEnglishLayout>
