--- a/app/src/layouts/BaseLayout.astro
+++ b/app/src/layouts/BaseLayout.astro
@@ -23,6 +23,12 @@ const { locale, title } = Astro.props;
     <meta name="twitter:site:id" content="960225296258564096" />
     <meta name="twitter:creator:id" content="960225296258564096" />
     <meta name="pinterest-rich-pin" content="true" />
+
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    {locale == "ar" ? 
+      <link rel="alternate" type="application/rss+xml" title="مدونة عبد الرحمن الغول" href="//al-ghoul.github.io/feed.xml" />
+      :
+      <link rel="alternate" type="application/rss+xml" title="Abdulrahman AlGhoul's Blog" href="https://al-ghoul.github.io/en/feed.xml" />}
     <slot />
 		<title>{title}</title>
 	</head>
