fix: broken post content layout

--- a/app/src/pages/posts/[slug].astro
+++ b/app/src/pages/posts/[slug].astro
@@ -74,7 +74,7 @@ const tags = await Promise.all(
 
     <main class="min-h-screen mb-12">
       <div class="flex lg:gap-8 mt-24 px-4 sm:px-6 lg:px-8">
-        <div class="flex flex-1 gap-4 justify-center min-w-0">
+        <div class="block lg:flex flex-1 gap-4 justify-center min-w-0">
           <PostWithTOC 
             post={{...post, frontmatter: remarkPluginFrontmatter}}
             headings={headings}
